@@ -16,6 +16,7 @@
 %Document -extract-stream - check enc
 %Document -obj - check enc
 %Document -merge-no-struct-trees in merge and collate
+%Document -shift-boxes
 \documentclass{book}
 % Edit here to produce cpdfmanual.pdf, cpdflibmanual.pdf, pycpdfmanual.pdf,
 % dotnetcpdflibmanual.pdf, jcpdflibmanual.pdf jscpdflibmanual.pdf etc.
